--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Phlana</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="icon" type="image/png" href="assets/icon.png">
+    <link rel="stylesheet" type="text/css" href="assets/index.css">
+
+    <!-- animation library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
+</head>
 <body>
-	lol
+    <div class="arrows">Hello World</div>
+    <!-- animation script must go after elements -->
+    <script src="lib/arrows.js"></script>
 </body>
+
 </html>
