added restart button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="arrows">Hello World</div>
+    <div class="button">restart</div>
     <!-- animation script must go after elements -->
     <script src="lib/arrows.js"></script>
 </body>
