--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="icon" type="image/png" href="assets/icon.png">
-    <link rel="stylesheet" type="text/css" href="assets/index.css">
+    <link rel="icon" type="image/png" href="assets/images/icon.png">
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 
     <!-- animation library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
