--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
 </head>
 <body>
-    <div class="arrows">Hello World</div>
-    <div class="button">restart</div>
+    <div class="arrows">
+        <img src="assets/images/arrows/4th.png" class="arrowimg" alt="4th">
+        <img src="assets/images/arrows/8th.png" class="arrowimg" alt="8th">
+        <img src="assets/images/arrows/16th.png" class="arrowimg" alt="16th">
+        <img src="assets/images/arrows/32th.png" class="arrowimg" alt="32th">
+        <!-- <img src="assets/images/arrows/64th.png" class="arrowimg" alt="64th">
+        <img src="assets/images/arrows/12th.png" class="arrowimg" alt="12th">
+        <img src="assets/images/arrows/24th.png" class="arrowimg" alt="24th">
+        <img src="assets/images/arrows/48th.png" class="arrowimg" alt="48th"> -->
+    </div>
+    <div class="play button">play</div>
+    <div class="pause button">pause</div>
+    <div class="restart button">restart</div>
     <!-- animation script must go after elements -->
     <script src="lib/arrows.js"></script>
 </body>
