--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
     <!-- animation script must go after elements -->
     <script src="lib/arrows.js"></script>
 </body>
-
+<script src="lib/scroll.js"></script>
 </html>
