--- a/index.html
+++ b/index.html
@@ -10,23 +10,17 @@
 
     <!-- animation library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
+
+    <!-- space font -->
+    <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="arrows">
-        <img src="assets/images/arrows/4th.png" class="arrowimg" alt="4th">
-        <img src="assets/images/arrows/8th.png" class="arrowimg" alt="8th">
-        <img src="assets/images/arrows/16th.png" class="arrowimg" alt="16th">
-        <img src="assets/images/arrows/32th.png" class="arrowimg" alt="32th">
-        <!-- <img src="assets/images/arrows/64th.png" class="arrowimg" alt="64th">
-        <img src="assets/images/arrows/12th.png" class="arrowimg" alt="12th">
-        <img src="assets/images/arrows/24th.png" class="arrowimg" alt="24th">
-        <img src="assets/images/arrows/48th.png" class="arrowimg" alt="48th"> -->
+    <div class="animation-wrapper">
+        <div class="ls top"></div>
+        <div class="name">Phlana</div>
+        <div class="ls bottom"></div>
     </div>
-    <div class="play button">play</div>
-    <div class="pause button">pause</div>
-    <div class="restart button">restart</div>
-    <!-- animation script must go after elements -->
-    <script src="lib/arrows.js"></script>
+    <script src="lib/home.js"></script>
 </body>
 
 </html>
