--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div class="animation-wrapper">
-        <div class="ls top"></div>
+        <div class="line top"></div>
         <div class="name">Phlana</div>
-        <div class="ls bottom"></div>
+        <div class="line bottom"></div>
     </div>
     <script src="lib/home.js"></script>
 </body>
