--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <link rel="icon" type="image/png" href="assets/images/icon.png">
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+    
+    <!-- reset css to reset default styles -->
+    <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 
     <!-- animation library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.1.0/anime.min.js"></script>
