hidden control div

--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
         <div class="line bottom"></div>
     </div>
     <script src="lib/home.js"></script>
+
+    <div class="controls hidden">
+        should be hidden
+    </div>
+
+    <!-- <div class="info">
+        sample text
+    </div> -->
 </body>
 
 </html>
