--- a/index.html
+++ b/index.html
@@ -23,15 +23,25 @@
         <div class="name">Phlana</div>
         <div class="line bottom"></div>
     </div>
-    <script src="lib/home.js"></script>
 
     <div class="controls hidden">
-        should be hidden
+        <!-- buttons for playback controls -->
+        <div class="play button">
+            <img src="assets/images/play.png" width="32" height="32">
+        </div>
+        <div class="pause button">
+            <img src="assets/images/pause.png" width="32" height="32">
+        </div>
+        <!-- slider for seeking -->
+        <input type="range" class="slider seek" min="0" max="100" value="0">
+        <input type="range" class="slider speed" min="0.1" max="5" value="1" step="0.1">
     </div>
 
     <!-- <div class="info">
         sample text
     </div> -->
+
+    <script src="lib/home.js"></script>
 </body>
 
 </html>
