--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="assets/images/pause.png" width="32" height="32">
         </div>
         <!-- slider for seeking -->
-        <input type="range" class="slider seek" min="0" max="100" value="0">
+        <input type="range" class="slider seek" min="0" max="100" value="0" step="0.01">
     </div>
 
     <!-- <div class="info">
