add basic sticky banner

--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
             </div>
         </div>
     </div>
+    <div class="content">
+        <div class="sticky banner">
+            <div class="icon university">
+                <a href="">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4e/University_of_Alberta_seal.svg/1280px-University_of_Alberta_seal.svg.png" width="128" height="128">
+                </a>
+            </div>
+            <div class="icon github">
+                <a href="https://github.com/Phlana">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/600px-Octicons-mark-github.svg.png" width="128" height="128">
+                </a>
+            </div>
+            <div class="icon osrs">
+                <a href="">
+                    <img src="https://oldschool.runescape.wiki/images/4/46/Old_School_RuneScape_Mobile_icon.png?6b7d1" width="128" height="128">
+                </a>
+            </div>
+            <div class="icon osu">
+                <a href="https://osu.ppy.sh/users/3997434">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Osu%21Logo_%282015%29.png" width="128" height="128">
+                </a>
+            </div>
+        </div>
+    </div>
 
     <!-- <div class="info">
         sample text
