changed some colors, add divs for scroll animation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="initial-screen">
-        <div class="flashy">
+        <div class="logo-animation">
             <div class="animation-wrapper">
                 <div class="line top"></div>
                 <div class="name">Phlana</div>
@@ -39,7 +39,11 @@
             </div>
         </div>
     </div>
-    <div class="content">
+    <div class="scroll-animation">
+        <canvas id="triangles">
+        </canvas>
+    </div>
+<!--     <div class="content">
         <div class="sticky banner">
             <div class="icon university">
                 <a href="">
@@ -62,7 +66,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- <div class="info">
         sample text
