--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <input type="range" class="slider seek" min="0" max="100" value="0" step="0.01">
             </div>
         </div>
+        <div class="triangle-down">
+        </div>
     </div>
     <div class="scroll-animation">
         <canvas id="triangles">
