transition to fixed width

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="scroll-animation">
-        <canvas id="triangles">
+        <canvas class="triangles">
         </canvas>
     </div>
 <!--     <div class="content">
