--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
                 <input type="range" class="slider seek" min="0" max="100" value="0" step="0.01">
             </div>
         </div>
-        <div class="triangle-down">
-        </div>
+        <div class="triangle-down"></div>
     </div>
     <div class="scroll-animation">
-        <canvas class="triangles">
-        </canvas>
+        <!-- <canvas class="triangles"></canvas> -->
+        <!-- <svg xmlns="http://www.w3.org/2000/svg"></svg> -->
     </div>
 <!--     <div class="content">
         <div class="sticky banner">
@@ -73,8 +72,7 @@
     <!-- <div class="info">
         sample text
     </div> -->
-
     <script src="lib/home.js"></script>
+    <script src="lib/scroll.js"></script>
 </body>
-<script src="lib/scroll.js"></script>
 </html>
