--- a/test.html
+++ b/test.html
@@ -17,10 +17,12 @@
     <!-- space font -->
     <link href="https://fonts.googleapis.com/css?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="scroll-animation">
-        <svg xmlns="http://www.w3.org/2000/svg" class="triangles"></svg>
     </div>
+    <button class="opacity-button">half opacity</button>
     <script src="lib/test.js"></script>
 </body>
+
 </html>
