--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <!-- <div class="info">
         sample text
     </div> -->
+    <div class="resize-cover"></div>
     <script src="lib/home.js"></script>
     <script src="lib/scroll.js"></script>
 </body>
